[gd_scene load_steps=6 format=2]

[ext_resource path="res://LanguageSelect.gd" type="Script" id=1]
[ext_resource path="res://Art/Wood_BG.png" type="Texture" id=2]
[ext_resource path="res://Art/English.png" type="Texture" id=3]
[ext_resource path="res://Art/Greece.png" type="Texture" id=4]
[ext_resource path="res://Art/Germany.png" type="Texture" id=5]

[node name="Control" type="Control"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 800.0
margin_top = 460.0
margin_right = 800.0
margin_bottom = 460.0
color = Color( 0.145098, 0.45098, 0.180392, 1 )

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( -440.328, 181.312 )
scale = Vector2( 0.470441, 1.42231 )
texture = ExtResource( 2 )

[node name="English" type="TextureButton" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -518.0
margin_top = -131.0
margin_right = -326.0
margin_bottom = -7.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Greek" type="TextureButton" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -518.0
margin_top = 293.0
margin_right = -326.0
margin_bottom = 417.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="German" type="TextureButton" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -518.0
margin_top = 69.0
margin_right = -326.0
margin_bottom = 193.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="Background/English" to="." method="_on_English_pressed"]
[connection signal="pressed" from="Background/Greek" to="." method="_on_Greek_pressed"]
[connection signal="pressed" from="Background/German" to="." method="_on_German_pressed"]
